sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:18: error: ';' expected but integer literal found.
	    } fin+=1  
                   ^AlgCocktailSort2:30: error: ';' expected but integer literal found.
	      }fin-=1
                    ^